# PiMorse

./: LICENSE  README.md
1_send/: CMakeLists.txt  mcSendLib.c  mcSendLib.h  mcsend.c
2_receive/: CMakeLists.txt  MorseToAsciiTable.h  libMorseReceive.c  libMorseReceive.h  mcrecv.c
3_send_threaded/: CMakeLists.txt
3_send_threaded/src/: mcSendLib.c  mcSendLib.h  mcsend.c  threading.c  threading.h
3_send_threaded/src/list/: list.c  list.h
4_receive_threaded/: CMakeLists.txt
4_receive_threaded/src/: main.c  morseReceive.c  morseReceive.h  threading.c  threading.h
4_receive_threaded/src/list/: list.c  list.h
